--- a/diamm/templates/index.html
+++ b/diamm/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <p>Hello World.</p>
+    {% include "website/blocks/front_carousel.html" %}
+    {% include "website/blocks/search_box.html" %}
+
 {% endblock %}
