--- a/diamm/templates/website/composition/composition_detail.html
+++ b/diamm/templates/website/composition/composition_detail.html
@@ -17,7 +17,7 @@
     <h2>Appears in:</h2>
     <ul>
     {% for source in content.sources %}
-        <li><a href="{{ source.url }}">{{ source.full_name }}</a></li>
+        <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
     {% endfor %}
     </ul>
 {% endblock %}
