--- a/diamm/static/stylesheets/_fonts.scss
+++ b/diamm/static/stylesheets/_fonts.scss
@@ -1,8 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Alegreya:400,400italic,700,700italic|Alegreya+SC:400,700|Alegreya+Sans:400,500,700|Alegreya+Sans+SC:400,500,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|PT+Sans:400,400italic,700,700italic);
 
 $fa-font-path: "../fonts/font-awesome" !default;
-$font-family-sans-serif: "Alegreya Sans" !default;
-$font-family-serif: "Alegreya" !default;
+$font-family-sans-serif: "PT Sans" !default;
+$font-family-serif: "PT Serif" !default;
 $font-family-base: $font-family-serif;
 $font-size-base: 16px !default;
 $headings-font-family: $font-family-sans-serif;
