Update source list template

--- a/diamm/templates/website/source/source_list.html
+++ b/diamm/templates/website/source/source_list.html
@@ -4,7 +4,7 @@
     <h1>Source List</h1>
     <ul>
     {% for source in content.results %}
-        <li><a href="{{ source.url }}">{{ source.full_name }}</a></li>
+        <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
     {% endfor %}
     </ul>
 {% endblock %}
