--- a/diamm/templates/website/blocks/search_box.html
+++ b/diamm/templates/website/blocks/search_box.html
@@ -4,7 +4,7 @@
             <form action="{% url 'search' %}" method="get">
             <div class="col-md-8 col-md-offset-2 input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-                    <input type="search" class="form-control input-lg" placeholder="Search" name="q" />
+                    <input type="search" class="form-control input-lg" placeholder="Search" name="q" {% if content.query %}value="{{ content.query }}"{% endif %} />
             </div>
             </form>
         </div>
