--- a/diamm/templates/website/auth/login.html
+++ b/diamm/templates/website/auth/login.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h1>Login form.</h1>
+    <div class="col-md-offset-4 col-md-4">
+        <form action="{% url "login" %}" method="post">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input class="form-control" id="username" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 {% endblock %}
