--- a/diamm/templates/website/blocks/main_menu.html
+++ b/diamm/templates/website/blocks/main_menu.html
@@ -18,11 +18,30 @@
                     Donate
                 </a>
             </li>
+            {% if request.user.is_authenticated %}
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="fa fa-user"></span> Welcome
+                    {% if user.last_name %}
+                        {{ user.first_name }} {{ user.last_name }}
+                    {% else %}
+                        {{ user.username }}
+                    {% endif %}
+                    <span class="fa fa-caret-down"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="{% url "user-profile" request.user.id %}">User Profile</a></li>
+                    <li class="divider"></li>
+                    <li><a href="{% url "logout" %}">Logout</a></li>
+                </ul>
+            </li>
+            {% else %}
             <li>
-                <a href="#">
+                <a href="{% url "login" %}">
                     <span class="fa fa-user"></span> Login
                 </a>
             </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
