--- a/diamm/templates/website/country/country_detail.html
+++ b/diamm/templates/website/country/country_detail.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h1>{{ content.name }}</h1>
-    <h2>Cities</h2>
-    <ul>
-        {% for city in content.cities %}
-        <li><a href="{{ city.url }}">{{ city.name }}</a></li>
-        {% endfor %}
-    </ul>
+    <div class="col-md-12">
+        <h1>{{ content.name }}</h1>
+        <h2>Cities</h2>
+        <ul>
+            {% for city in content.cities %}
+            <li><a href="{{ city.url }}">{{ city.name }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
