--- a/diamm/templates/website/search/results/person.html
+++ b/diamm/templates/website/search/results/person.html
@@ -1,8 +1,9 @@
-<div class="col-md-2">
-    <ul>
-        <li><span class="fa fa-user"></span> Person</li>
-    </ul>
-</div>
-<div class="col-md-10">
-    <p><a href="{{ result.url }}">{{ result.full_name_s }}</a></p>
+<div class="col-md-12">
+    <h4>
+        <span class="label label-info">
+            <span class="fa fa-user"> Person</span>
+        </span>
+        &nbsp;
+        <a href="{{ result.url }}">{{ result.full_name_s }}</a>
+    </h4>
 </div>
