--- a/diamm/templates/website/blocks/main_menu.html
+++ b/diamm/templates/website/blocks/main_menu.html
@@ -10,6 +10,17 @@
             <li>
                 <a href="{% url "search" %}">Search</a>
             </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    Browse <span class="fa fa-caret-down"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a href="{% url "country-list" %}"> Countries</a>
+                        <a href="{% url "city-list" %}"> Cities</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="donate-button">
@@ -32,7 +43,7 @@
                 <ul class="dropdown-menu">
                     <li><a href="{% url "user-profile" request.user.id %}">User Profile</a></li>
                     <li class="divider"></li>
-                    <li><a href="{% url "logout" %}">Logout</a></li>
+                    <li><a href="#" id="logout-link">Logout</a></li>
                 </ul>
             </li>
             {% else %}
