--- a/diamm/templates/website/city/city_detail.html
+++ b/diamm/templates/website/city/city_detail.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h1>{{ content.name }}, <a href="{{ content.country.url }}">{{ content.country.name }}</a></h1>
-    <h2>Archives</h2>
-    <ul>
-    {% for archive in content.archives %}
-        <li>
-            <a href="{{ archive.url }}">{{ archive.name }}</a>
-        </li>
-    {% endfor %}
-    </ul>
+    <div class="col-md-12">
+        <h1>{{ content.name }}, <a href="{{ content.country.url }}">{{ content.country.name }}</a></h1>
+        <h2>Archives</h2>
+        <ul>
+        {% for archive in content.archives %}
+            <li>
+                <a href="{{ archive.url }}">{{ archive.name }}</a>
+            </li>
+        {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
