--- a/diamm/templates/website/city/city_list.html
+++ b/diamm/templates/website/city/city_list.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h1>City List</h1>
-    <ul>
-    {% for city in content.results %}
-    <li><a href="{{ city.url }}">{{ city.name }}</a></li>
-    {% endfor %}
-    </ul>
+    <div class="col-md-12">
+        <h1>City List</h1>
+        <ul>
+        {% for city in content.results %}
+        <li><a href="{{ city.url }}">{{ city.name }}</a></li>
+        {% endfor %}
+        </ul>
+        {% include "website/blocks/browse_paginator.html" %}
+    </div>
 {% endblock %}
