--- a/diamm/templates/website/search/results/archive.html
+++ b/diamm/templates/website/search/results/archive.html
@@ -1,8 +1,12 @@
-<div class="col-md-2">
-    <ul>
-        <li><i class="fa fa-university"></i> Archive</li>
-    </ul>
-</div>
-<div class="col-md-10">
-    <p><a href="{{ result.url }}">{{ result.name_s }}</a></p>
+<div class="col-md-12">
+    <h4>
+        <span class="label label-warning">
+            <span class="fa fa-university"> Archive</span>
+        </span>
+        &nbsp;
+        <a href="{{ result.url }}">{{ result.name_s }}</a>
+    </h4>
+    <p>
+        {{ result.city_s }}, {{ result.country_s }}
+    </p>
 </div>
