--- a/diamm/templates/website/search/results/composition.html
+++ b/diamm/templates/website/search/results/composition.html
@@ -1,8 +1,14 @@
-<div class="col-md-2">
-    <ul>
-        <li><span class="fa fa-music"></span> Composition</li>
-    </ul>
-</div>
-<div class="col-md-10">
-    <p><a href="{{ result.url }}">{{ result.name_s }}</a></p>
+<div class="col-md-12">
+    <h4>
+        <span class="label label-danger">
+            <span class="fa fa-music"> Composition</span>
+        </span>
+        &nbsp;
+        <a href="{{ result.url }}">{{ result.name_s }}</a>
+    </h4>
+    <p>
+    {% if result.genres_ss %}
+        {{ result.genres_ss | join:"; " }}
+    {% endif %}
+    </p>
 </div>
