--- a/diamm/templates/website/search/results/source.html
+++ b/diamm/templates/website/search/results/source.html
@@ -1,9 +1,13 @@
-<div class="col-md-2">
-    <ul>
-        <li><span class="fa fa-book"></span> Source</li>
-    </ul>
+<div class="col-md-12">
+    <h4>
+        <span class="label label-success">
+            <span class="fa fa-book"> Source</span>
+        </span>
+        &nbsp;
+        <a href="{{ result.url }}">{{ result.display_name_s }}</a>
+    </h4>
+    {% if result.notes_ss %}
+        <p>{{ result.notes_ss | join:"; " | truncatechars:100 }}</p>
+    {% endif %}
 </div>
-<div class="col-md-10">
-    <p><a href="{{ result.url }}">{{ result.display_name_s }}</a></p>
-    <p><span class="fa fa-university"></span> {{ result.archive_s }}</p>
-</div>
+
