--- a/diamm/static/stylesheets/_fonts.scss
+++ b/diamm/static/stylesheets/_fonts.scss
@@ -3,6 +3,6 @@
 $fa-font-path: "../fonts/font-awesome" !default;
 $font-family-sans-serif: "PT Sans" !default;
 $font-family-serif: "PT Serif" !default;
-$font-family-base: $font-family-serif;
+$font-family-base: $font-family-sans-serif;
 $font-size-base: 16px !default;
 $headings-font-family: $font-family-sans-serif;
