--- a/diamm/templates/website/blocks/main_menu.jinja2
+++ b/diamm/templates/website/blocks/main_menu.jinja2
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-default diamm-navbar">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url "home" %}">DIAMM</a>
+            <a class="navbar-brand" href="{{ url("home") }}">DIAMM</a>
         </div>
         <ul class="nav navbar-nav">
             <li>
                 <a href="#">About</a>
             </li>
             <li>
-                <a href="{% url "search" %}">Search</a>
+                <a href="{{ url("search") }}">Search</a>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -16,8 +16,8 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="{% url "country-list" %}"> Countries</a>
-                        <a href="{% url "city-list" %}"> Cities</a>
+                        <a href="{{ url("country-list") }}"> Countries</a>
+                        <a href="{{ url("city-list") }}"> Cities</a>
                     </li>
                 </ul>
             </li>
@@ -29,26 +29,28 @@
                     Donate
                 </a>
             </li>
-            {% if request.user.is_authenticated %}
+            {% if request.user.is_authenticated() %}
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="fa fa-user"></span> Welcome
-                    {% if user.last_name %}
-                        {{ user.first_name }} {{ user.last_name }}
+                    {% if request.user.last_name %}
+                        {{ request.user.first_name }} {{ request.user.last_name }}
                     {% else %}
-                        {{ user.username }}
+                        {{ request.user.username }}
                     {% endif %}
                     <span class="fa fa-caret-down"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li></li>
+                    <li>
+                        <a href="{{ url("user-profile", pk=request.user.id) }}">User Profile</a>
+                    </li>
                     <li class="divider"></li>
                     <li><a href="#" id="logout-link">Logout</a></li>
                 </ul>
             </li>
             {% else %}
             <li>
-                <a href="{% url "login" %}">
+                <a href="{{ url("login") }}">
                     <span class="fa fa-user"></span> Login
                 </a>
             </li>
