--- a/diamm/templates/website/search/results/organization.jinja2
+++ b/diamm/templates/website/search/results/organization.jinja2
@@ -1,7 +1,7 @@
 <div class="col-md-12">
     <p>
         <span class="label label-info">
-            <span class="fa fa-user"> Person</span>
+            <span class="fa fa-user"> Organization</span>
         </span>
         &nbsp;
         <a href="{{ result.url }}">{{ result.name_s }}</a>
