--- a/diamm/templates/index.jinja2
+++ b/diamm/templates/index.jinja2
@@ -3,5 +3,18 @@
 {% block body %}
     {% include "website/blocks/front_carousel.jinja2" %}
     {% include "website/blocks/search_box.jinja2" %}
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8">
+                <h3>News</h3>
+                {% for story in content.stories %}
+                    <h4><a href="{{ story.url }}">{{ story.title }}</a></h4>
+                    {{ story.body | markdown | truncatewords(50) | safe }}
+                {% endfor %}
+            </div>
+            <div class="col-md-4">
+                <h3>Other stuff</h3>
+            </div>
+        </div>
+    </div>
 {% endblock %}
