--- a/diamm/templates/website/archive/archive_detail.jinja2
+++ b/diamm/templates/website/archive/archive_detail.jinja2
@@ -1,13 +1,22 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <h1>{{ content.name }} ({{ content.siglum }})</h1>
-    <h2>{{ content.city.name }}</h2>
-
-    <h3>Sources in this Archive</h3>
-    <ul>
-    {% for source in content.sources %}
-        <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
-    {% endfor %}
-    </ul>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>{{ content.name }} ({{ content.siglum }})</h1>
+            <h2>{{ content.city.name }}</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Sources in this Archive</h3>
+            <ul>
+            {% for source in content.sources %}
+                <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
+    </div>
 {% endblock %}
