--- a/diamm/templates/website/search/results/source.jinja2
+++ b/diamm/templates/website/search/results/source.jinja2
@@ -1,13 +1,13 @@
 <div class="col-md-12">
-    <h4>
+    <p>
         <span class="label label-success">
             <span class="fa fa-book"> Source</span>
         </span>
         &nbsp;
-        <a href="{{ result.url }}">{{ result.display_name_s }}</a>
-    </h4>
-    {% if result.notes_ss %}
-        <p>{{ result.notes_ss | join("; ") | truncatechars(100) }}</p>
+        <a href="{{ result.url }}">{{ result.name_s }}</a>
+    </p>
+    {% if result.result_text %}
+        <p>{{ result.result_text | safe }}</p>
     {% endif %}
 </div>
 
