--- a/diamm/templates/website/search/results/type_links.jinja2
+++ b/diamm/templates/website/search/results/type_links.jinja2
@@ -6,7 +6,7 @@
   {% if type == params.type %}
     <strong>
   {% endif %}
-    {{ type | title }}
+    {{ type | title }} ({{ count }})
   {% if type == params.type %}
     </strong>
   {% endif %}
